force-app/main/default/objects/Observership__c/Observership__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>Observership</label>
    <nameField>
        <label>Observership</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Observerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>