force-app/main/default/objects/Observership__c/fields/Alianza_App_Date_II__c.field-meta.xml
<CustomField>
    <fullName>Alianza_App_Date_II__c</fullName>
    <label>Alianza App. Date II</label>
    <type>Date</type>
</CustomField>