force-app/main/default/objects/Observership__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Observership Applications</relationshipLabel>
    <relationshipName>Observership_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>