force-app/main/default/objects/Observership__c/fields/Flight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Flight_Cost__c</fullName>
    <label>Flight Cost</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>