force-app/main/default/objects/Observership__c/fields/Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Item_ID__c</fullName>
    <label>Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>